# Reality

./: CMakeLists.txt
Engine/Source/: Reality.h
Engine/Source/Components/: TransformComponent.cpp  TransformComponent.h
Engine/Source/Core/: BaseComponent.h  BaseGameObject.cpp  BaseGameObject.h  Camera.cpp  Camera.h  MathF.h  PrimitiveRenderer.cpp  PrimitiveRenderer.h  RealityApplication.cpp  RealityApplication.h  Scene.h  Shader.h
Engine/Source/Platform/: DisplayManager.cpp  DisplayManager.h  RealityWindow.cpp  RealityWindow.h  Window.cpp  Window.h
Engine/Source/Rendering/: CommandList.cpp  CommandList.h  DisplayManager.cpp  DisplayManager.h  GraphicsDevice.h  GraphicsFactory.cpp  GraphicsFactory.h  GraphicsTypes.h  HighLevelRenderer.cpp  HighLevelRenderer.h  ImguiBackend.cpp  ImguiBackend.h  Material.cpp  Material.h  PrimitiveRenderer.h  Renderer.cpp  Renderer.h  Resource.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h
Engine/Source/Rendering/Backends/D3D12/: D3D12Buffer.cpp  D3D12Buffer.h  D3D12CommandList.cpp  D3D12CommandList.h  D3D12Device.cpp  D3D12Device.h  D3D12Fence.cpp  D3D12Fence.h  D3D12PipelineState.cpp  D3D12PipelineState.h  D3D12Shader.cpp  D3D12Shader.h  D3D12SwapChain.cpp  D3D12SwapChain.h  D3D12Texture.cpp  D3D12Texture.h
Engine/Source/RenderingBackend/: CommandList.cpp  CommandList.h  D3D12Buffer.cpp  D3D12Buffer.h  D3D12CommandList.cpp  D3D12CommandList.h  D3D12Device.cpp  D3D12Device.h  D3D12Fence.cpp  D3D12Fence.h  D3D12PipelineState.cpp  D3D12PipelineState.h  D3D12Shader.cpp  D3D12Shader.h  D3D12Texture.cpp  D3D12Texture.h  GraphicsDevice.h  GraphicsFactory.cpp  GraphicsFactory.h  GraphicsTypes.h  Resource.h
Engine/Source/RenderingBackend/RAW/: DX12Renderer.cpp  DX12Renderer.h
Engine/Source/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandList.cpp  VulkanCommandList.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFence.cpp  VulkanFence.h  VulkanPipelineState.cpp  VulkanPipelineState.h  VulkanShader.cpp  VulkanShader.h  VulkanTexture.cpp  VulkanTexture.h
Samples/Sandbox/: CMakeLists.txt
Samples/Sandbox/Source/: Sandbox.cpp  TestGameobject.h
Samples/sandbox/: CMakeLists.txt
Samples/sandbox/src/: Sandbox.cpp  TestGameobject.cpp  TestGameobject.h
engine/: CMakeLists.txt
engine/src/: Reality.h
engine/src/Components/: TransformComponent.cpp  TransformComponent.h
engine/src/Core/: BaseGameObject.cpp  RealityApplication.h  Shader.cpp
engine/src/Platform/: Window.h
engine/src/Rendering/: ImguiBackend.cpp  Renderer.h
engine/src/core/: BaseComponent.cpp  BaseComponent.h  BaseGameObject.cpp  BaseGameObject.h  Camera.cpp  Camera.h  Color.h  Config.h  Log.cpp  Log.h  MathF.h  Matrix4x4.h  PrimitiveRenderer.cpp  PrimitiveRenderer.h  Quaternion.h  RealityApplication.cpp  RealityApplication.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Timer.cpp  Timer.h  TransformComponent.cpp  TransformComponent.h  Vector2.h  Vector3.h
engine/src/platform/: Window.cpp  Window.h
engine/src/rendering/: DisplayManager.cpp  DisplayManager.h  ImguiBackend.cpp  ImguiBackend.h  Renderer.cpp  Renderer.h
